[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.12",
    "mkdocs-pdf-export-plugin>=0.5.10",
    "pymdown-extensions>=10.15",
]
